fixed spacing around button

--- a/src/styles/partials/components/_section.scss
+++ b/src/styles/partials/components/_section.scss
@@ -2,7 +2,7 @@
   padding: $padding-jumbo 0;
 
   .dg_section-cta {
-    padding: $padding-large 0;
+    padding: $padding-largest 0;
     text-align: center;
   }
 
